<resources>
    <string name="app_name">AMCC</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="share">Share</string>

    <string name="the_first_function_name">Find out what is the annual tax for a car</string>
    <string name="get_tax_btnTxt">Get Tax Now</string>
    <string name="city">City or Postcode</string>
    <string name="first_register_date">First Register Date</string>
    <string name="emission">Co2 Emission</string>
    <string name="enter_emission_number">e.g. 140</string>
    <string name="engine_size">Engine Size</string>
    <string name="enter_the_size_of_engine">e.g. 1398</string>

    <string name="average_consume">Average Fuel Consumption</string>
    <string name="enter_average_consume">e.g. 7.5</string>
    <string name="average_consume_per_100_km">liter/100km</string>

    <string name="mileage_per_year">Kilometers per Year</string>
    <string name="_000_km">.000 km per year</string>
    <string name="enter_from_1_20">e.g. 20</string>

    <string name="get_result">Get Result</string>
    <string name="error_field_required">This field is required</string>

    <string name="diesel">Diesel</string>
    <string name="e5">Super</string>
    <string name="e10">E10</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="euro3_higher">Only for Euro 3 and higher</string>
    <string name="new_request">Edit</string>
    <string name="car_specification">Car Specification:</string>
    <string name="dialog_rate_app">Was this helpful?</string>
    <string name="fuel_cost_annual">Annual Fuel Cost:</string>
    <string name="fuel_price_label">Fuel Price:</string>
    <string name="annual_tax_result">Annual Tax:</string>
    <string name="resutl_txt">Costs:</string>
    <string name="enter_city_name_or_zip">Enter city or ZIP</string>
    <string name="banner_id">ca-app-pub-4242963717208905/1233368693</string>
    <string name="banner_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_id">ca-app-pub-4242963717208905/7770856884</string>
    <string name="admob_app_id">ca-app-pub-4242963717208905~4145654251</string>

    <string name="try_later_msg">Sorry something went wrong! Please try again later.</string>
    <string name="_01_01_2020">01.01.2020</string>
    <string name="cm3">cm³</string>
    <string name="g_km">g/km</string>
    <string name="emission_class">Emission class</string>
    <string name="car_image">Car Image</string>
    <string name="currency">Euro</string>

</resources>
