<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackground">

    <!-- Load the toolbar here -->
    <include
        android:id="@+id/app_toolbar"
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_margin="15dp"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtViewCityID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/spinnerCityHolderID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/txtViewRegDateID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_register_date"
                    android:textSize="24sp" />

                <CalendarView
                    android:id="@+id/calendarViewID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/txtViewEmissionID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emission"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edtNumEmissionID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/enter_emission_number"
                    android:inputType="numberDecimal"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/txtViewEngineId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/engine_size"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edtNumEngSizeID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/enter_the_size_of_engine"
                    android:inputType="numberDecimal"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/txtViewConsumID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/average_consume"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edtNumConsumeID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/average_consume_per_100_km"
                    android:inputType="number"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/txtviewDistancePerYreaID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mileage_per_year"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtNumMileAgeYearID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/enter_from_1_20"
                        android:inputType="number"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/txtView1000kmID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/_000_km" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <View
            android:id="@+id/divInputInterfaceID"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btnResultID"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="getResult"
            android:padding="20dp"
            android:text="@string/get_result"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- Rest of content for the activity -->

</androidx.constraintlayout.widget.ConstraintLayout>