<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true">

    <GridLayout
        android:id="@+id/home_linearLayout_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:padding="8dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_rowSpan="2"
            android:layout_columnWeight="1"
            android:contentDescription="@string/car_image"
            android:src="@drawable/car_go" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_columnWeight="1"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/the_first_function_name" />

        <Button
            android:id="@+id/home_getTax_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_tax_btnTxt"
            android:layout_columnWeight="1"
            android:layout_column="1"
            android:layout_row="1"
            style="@style/Widget.AppCompat.Button.Colored" />
    </GridLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>